Adding fields to ObjectMap seems to works, though there are still a few questions open